# QPdfReader

./: CMakeLists.txt  README.md  main.cpp
